--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sanity/client": "^7.13.2",
     "@sanity/image-url": "^2.0.2",
     "@sanity/vision": "^5.1.0",
+    "@woocommerce/woocommerce-rest-api": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
